fix spacing and css

--- a/src/pages/guestarea.css
+++ b/src/pages/guestarea.css
@@ -9,7 +9,7 @@
 .form-container h1, h2, h3 {
     text-align: center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    margin-top: 10px;
+    margin-top: 50px;
     margin-bottom: 20px;
 }
 
